Imperial Diet - Interactions

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -318,7 +318,7 @@
  ONLY_SIGILIAN:0 "£no£ Only Sigilian nations can join the Empire."
  SIGILIAN_HIGH_PIETY:0 "£no£ Your Imperial Allegiance needs to be above 50 to join the Saelian Empire."
  SIGILIAN_LOW_PIETY:0 "£no£ Your Imperial Allegiance needs to be below -25 to leave the Saelian Empire."
- EMPEROR_CANT_ATTACK_SUBJECTS:0 "The Emperor cannot wage wars against his subjects without the permission from the tetrarchy."
+ EMPEROR_CANT_ATTACK_SUBJECTS:0 "The Emperor cannot wage wars against his sigilian subjects without the permission from the tetrarchy."
  emperor_allowed_war:0 "Emperor allowed pacification"
  emperor_allowed_war_desc:0 "The Tetrarchy has given the emperor right to punish their unruly subjects."
  elector_graceful_enough:0 "The tetrarchs are already graceful enough."
@@ -424,3 +424,31 @@
  TD_Diet_High_Border_Tarrifs:0 "High Border Tarrifs"
  TD_Diet_Increased_Free_Trade:0 "Increased Free Trade"
  TD_Diet_Domain_Expanded:0 "Domain Expanded"
+
+
+ saelian.300.t:0 "Emperor Requests War Justification"
+ saelian.300.desc:0 "REPLACE_ME"
+ saelian.300.a:0 "I'm voting Yes"
+ saelian.300.b:0 "I'm voting No"
+ saelian.301.t:0 "War Justification Granted"
+ saelian.301.desc:0 "REPLACE_ME"
+ saelian.301.a:0 "Great!"
+ saelian.302.t:0 "War Justification Denied"
+ saelian.302.desc:0 "REPLACE_ME"
+ saelian.302.a:0 "The tetrarchy will always pursue their own agenda..."
+ saelian.303.t:0 "Prince requests imperial claims"
+ saelian.303.desc:0 "REPLACE_ME"
+ saelian.303.a:0 "Granted"
+ saelian.303.b:0 "We can't allow this kind of self-will"
+ saelian.304.t:0 "Imperial Claim Granted"
+ saelian.304.desc:0 "REPLACE_ME"
+ saelian.304.a:0 "I knew i could trust the emperor."
+ saelian.304.a_tt:0 "Emperor will not be able to demand unlawful land as long as you have this modifier."
+ saelian.305.t:0 "Imperial Claim Denied"
+ saelian.305.desc:0 "REPLACE_ME"
+ saelian.305.a:0 "That bastard..."
+ hre_prince_claimants_var:0 "Amount of Claimants in this Imperial Diet"
+ TD_Imperial_Diet_Action_1_tt:0 "Request from the Tetrarchy to justify your war against a fellow Sigilian."
+ TD_Imperial_Diet_Action_1_effect_tt:0 "Electors will vote on your proposal. You need to get at least 3 positive votes for it to pass."
+ TD_Imperial_Diet_Action_2_tt:0 "Request a lawful claim on a land in the empire."
+ imperial_grace:0 "Imperial Grace"
