--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -447,8 +447,9 @@
  saelian.305.t:0 "Imperial Claim Denied"
  saelian.305.desc:0 "REPLACE_ME"
  saelian.305.a:0 "That bastard..."
- hre_prince_claimants_var:0 "Amount of Claimants in this Imperial Diet"
+ hre_prince_claimants_var:0 "Amount of Claimants in the current Imperial Diet"
  TD_Imperial_Diet_Action_1_tt:0 "Request from the Tetrarchy to justify your war against a fellow Sigilian."
  TD_Imperial_Diet_Action_1_effect_tt:0 "Electors will vote on your proposal. You need to get at least 3 positive votes for it to pass."
  TD_Imperial_Diet_Action_2_tt:0 "Request a lawful claim on a land in the empire."
  imperial_grace:0 "Imperial Grace"
+ imperial_grace_tt:0 "This prince is under your grace and therefore you cannot demand unlawful land from them."
