--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -338,61 +338,62 @@
  saelian.102.a:0 "Now time to get some rest."
 
  saelian.201.t:0 "Tetrarch Abuses Power"
- saelian.201.desc:0 "REPLACE_ME"
- saelian.201.a:0 "Allow it"
+ saelian.201.desc:0 "Local nobles from all over the empire have came to complain about their land being seized 'in the name of God' by some electors. While partially legal, the nobles still demand recompensation for this loss."
+ saelian.201.a:0 "There is nothing we can do."
  saelian.201.b:0 "Prevent it"
  saelian.202.t:0 "Guilds Request Increased Tarrifs"
- saelian.202.desc:0 "REPLACE_ME"
+ saelian.202.desc:0 "A group and guild members from different parts of the empire reached out to the emperor in order for you to pass a new law which will increase taxes on foreign goods to protect the local production centers."
  saelian.202.a:0 "Increase the tax"
  saelian.202.b:0 "We can't upset our friends abroad."
  saelian.203.t:0 "Princely Border Dispute"
- saelian.203.desc:0 "REPLACE_ME"
+ saelian.203.desc:0 "The court was visited by two clearly conflicted princes. The first one claims that his land was unlawfully stolen from him by the other prince, who started building a large estate there. The second prince however justifies this action by bringing up ancient laws which granted his family this soil."
  saelian.203.a:0 "The first prince is clearly right."
  saelian.203.b:0 "Favor the second prince."
  saelian.204.t:0 "Split in the Tetrarchy"
- saelian.204.desc:0 "REPLACE_ME"
+ saelian.204.desc:0 "A peculiar thing has happened in the empire - tetrarch requested the emperor's help. In a recent debate regarding some minor religious law, two of the tetrarchs proposed to change it, while the remaining two wanted to keep it. After not being able to come up with a solution, the reached out to the emperor himself."
  saelian.204.a:0 "Support the tradition."
  saelian.204.b:0 "Our religion needs to move forward."
  saelian.205.t:0 "Cow Selling Scandal"
- saelian.205.desc:0 "REPLACE_ME"
+ saelian.205.desc:0 "A family of disgrunted nobles came to the court this morning, proclaiming that citizens of [Emperor_diet_guy_who_sold_the_cow_target.GetName] are not to be trusted for they have sold them a faulty and sickly cow. The sellers of said cows claim that the nobles knew everything about the purchase."
  saelian.205.a:0 "The City must recompensate."
  saelian.205.a_tt:0 "Gain §G10§! opinion from monarchies and lose §R50§! opinion from republics in the empire."
  saelian.205.b:0 "Refund the purchase"
  saelian.205.c:0 "How amusing!"
  saelian.206.t:0 "Holy Investiture"
- saelian.206.desc:0 "REPLACE_ME"
+ saelian.206.desc:0 "A newly appointed bishop was recently given land in the province of [Emperor_diet_they_want_your_land_for_a_temple_target.GetName] in order to build a new church there, however due to a conflict of interest, a noble from these lands came to us in order to nicely ask to veto the decision of the tetrarchy. In order to make sure that his proposal passes, he offered a large chest of valuable goods..."
  saelian.206.a:0 "Allow it"
  saelian.206.b:0 "Deny it"
  saelian.207.t:0 "Request for War Supplies"
- saelian.207.desc:0 "REPLACE_ME"
+ saelian.207.desc:0 "[Emperor_diet_this_guy_is_at_war_and_needs_help_target.GetName] has recently got themselves into a war against the enemies of the empire and now requests war supplies such as men and funding in order to ensure the victory."
  saelian.207.a:0 "Granted"
  saelian.207.b:0 "We can't afford such help right now."
  saelian.208.t:0 "Deposition of prince [Emperor_diet_this_noble_has_negative_piety_target.Monarch.GetName]"
- saelian.208.desc:0 "REPLACE_ME"
+ saelian.208.desc:0 "[Emperor_diet_this_noble_has_negative_piety_target.Monarch.GetName] has become an increasingly infamous among some of the princes. While some were approving of his independent ruling, many see this as a self-will and wish for the emperor to deal with that potential heretic."
  saelian.208.a:0 "He can't be allowed to own land in our empire."
  saelian.208.b:0 "He shall remain a ruler."
+ saelian.208.b_tt:0 "All monarchies in the Empire lose §R50§! opinion of the emperor."
  saelian.209.t:0 "Merchants Demand Lower Taxes"
- saelian.209.desc:0 "REPLACE_ME"
+ saelian.209.desc:0 "Merchants from important hubs and cities of the empire came together to propose a lowering of some taxes in order to increase the profit, which will in turn benefit the empire. While it seems that they clearly just want to gather more private wealth, upsetting them might be problematic."
  saelian.209.a:0 "Decrease the Tax"
  saelian.209.b:0 "Bah! We need these money."
  saelian.210.t:0 "Expansion of Mining Rights"
- saelian.210.desc:0 "REPLACE_ME"
+ saelian.210.desc:0 "Recently, an old mine in the province of [Emperor_diet_mountain_to_dig_a_hole_in_target.GetName] has collapsed due to its old age and bad maintenance. The owners and local nobles requested the emperor to restore the mine, due to its rich natural resources and potential valuable metals which can be used to mint new coins."
  saelian.210.a:0 "Fund the Construction"
  saelian.210.b:0 "This is too risky."
  saelian.211.t:0 "Imperial City Requests Funding"
- saelian.211.desc:0 "REPLACE_ME"
+ saelian.211.desc:0 "The envoys from the prosperous city of [Emperor_diet_free_city_which_wants_your_money_target.GetName] came to the emperor asking for additional funding for the city, explaining that the negligence by the court may lead to local citizens leaving in order to pursue wealth in other parts of the world."
  saelian.211.a:0 "Grant the Fund"
  saelian.211.b:0 "You are asking too much of the crown."
  saelian.212.t:0 "Prince Requests Emperor's Land"
- saelian.212.desc:0 "REPLACE_ME"
+ saelian.212.desc:0 "One of the princes in the empire recently discovered, that through some ancient edict of previous emperors, piece of emperor's land belongs to that noble's family and he now requests that it will be returned to him. While absurd, many nobles agree with him on the basis of following the sacred imperial law."
  saelian.212.a:0 "If this is the price to please the public..."
  saelian.212.b:0 "Are you out of your mind?!"
  saelian.213.t:0 "Peasants Becoming too free"
- saelian.213.desc:0 "REPLACE_ME"
+ saelian.213.desc:0 "A large number of peasants have recently gained independence from their overlords through the use of a loophole, which allowed some of them to escape serfdom and become free. Many nobles fear that this information will rapidly spread and asked the emperor to amend the mistake as soon as possible."
  saelian.213.a:0 "Fix the Loophole"
  saelian.213.a_tt:0 "All monarchies gain §G20§! opinion of the emperor.\nGain §R3.00§! Unrest in §Yevery imperial province§!."
  saelian.213.b:0 "We might benefit from more independent peasantry."
- saelian.213.b_tt:0 "All monarchies lose §R50§! opinion of the emperor."
+ saelian.213.b_tt:0 "All monarchies in the Empire lose §R50§! opinion of the emperor."
 
  emperor_fixed_peasant_loophole:0 "Has fixed peasant-related loophole"
  emperor_allowed_peasant_loophole:0 "Allowed peasant-related loophole to exist"
@@ -427,25 +428,25 @@
 
 
  saelian.300.t:0 "Emperor Requests War Justification"
- saelian.300.desc:0 "REPLACE_ME"
+ saelian.300.desc:0 "The imperial envoys reached out to the Tetrarchy in order for them to vote on the matter of giving the emperor ability to fight against his own subjects. What will be our response?"
  saelian.300.a:0 "I'm voting Yes"
  saelian.300.b:0 "I'm voting No"
  saelian.301.t:0 "War Justification Granted"
- saelian.301.desc:0 "REPLACE_ME"
+ saelian.301.desc:0 "The wise tetrarchy granted us the freedom to pacify our rebellious subjects."
  saelian.301.a:0 "Great!"
  saelian.302.t:0 "War Justification Denied"
- saelian.302.desc:0 "REPLACE_ME"
+ saelian.302.desc:0 "The treacherous tetrarchy decided that we cannot fight within the empire on our own."
  saelian.302.a:0 "The tetrarchy will always pursue their own agenda..."
  saelian.303.t:0 "Prince requests imperial claims"
- saelian.303.desc:0 "REPLACE_ME"
+ saelian.303.desc:0 "The prince came to our court in order to ask for the imperial grace, which would allow him to wage war against fellow princes without any major reprecussion."
  saelian.303.a:0 "Granted"
  saelian.303.b:0 "We can't allow this kind of self-will"
  saelian.304.t:0 "Imperial Claim Granted"
- saelian.304.desc:0 "REPLACE_ME"
+ saelian.304.desc:0 "The emperor graciously accepted our proposal."
  saelian.304.a:0 "I knew i could trust the emperor."
  saelian.304.a_tt:0 "Emperor will not be able to demand unlawful land as long as you have this modifier."
  saelian.305.t:0 "Imperial Claim Denied"
- saelian.305.desc:0 "REPLACE_ME"
+ saelian.305.desc:0 "The tyrannical empero rejected our proposal."
  saelian.305.a:0 "That bastard..."
  hre_prince_claimants_var:0 "Amount of Claimants in the current Imperial Diet"
  TD_Imperial_Diet_Action_1_tt:0 "Request from the Tetrarchy to justify your war against a fellow Sigilian."
