rebalance, ai, loc

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -407,8 +407,8 @@
  emperor_stood_with_noble_in_the_cow_scandal_positive:0 "Forced city to recompensate the cow"
  emperor_refunded_the_cow_negative:0 "Refunded the cow"
  emperor_refunded_the_cow_positive:0 "Refunded the cow"
- emperor_favors_stance_A_positive:0 "Favors The Tradition"
- emperor_favors_stance_A_negative:0 "Favors The Tradition"
+ emperor_favors_stance_A_positive:0 "Favors Tradition"
+ emperor_favors_stance_A_negative:0 "Favors Tradition"
  emperor_favors_stance_B_positive:0 "Favors Progress"
  emperor_favors_stance_B_negative:0 "Favors Progress"
  emperor_favored_him_in_border_dispute:0 "Favored in border dispute"
@@ -454,3 +454,21 @@
  TD_Imperial_Diet_Action_2_tt:0 "Request a lawful claim on a land in the empire."
  imperial_grace:0 "Imperial Grace"
  imperial_grace_tt:0 "This prince is under your grace and therefore you cannot demand unlawful land from them."
+
+ saelian_ideas:0 "Saelian Ideas"
+ saelian_ideas_bonus:0 "Saelian Ambition"
+ saelian_ideas_start:0 "Saelian Traditions"
+ saelian_multicultural_empire:0 "Multicultural Empire"
+ saelian_multicultural_empire_desc:0 "Multiculturalism is deeply imbued in the spirit of our eternal empire. Saelius' leniency of syncretism with local folklore allowed saelian faith to rapidly spread in the country side and respecting noble customs from conquered lands helped them to assimilate into our culture. Despite having different religious rites, different customs and traditions, we all share the belief in the one true God."
+ saelian_laws_and_customs:0 "Laws and Customs"
+ saelian_laws_and_customs_desc:0 "Historically, when the empire was rapidly expanding there arose an issue of integrating various groups of people with varying attitude to them being annexed. The most common tactic used by many saelian rulers to effectively control local unruly tribes was to allow the to govern for themselves. It was far easier to force people to obey their own common law rather than enforce our own on them."
+ saelian_advanced_infrastructure:0 "Advanced Infrastructure"
+ saelian_advanced_infrastructure_desc:0 "One often overlooked detail when talking about factors of saelian success is the advanced communication network. This road network heavily relied on signaling towers and spaced out military camps to protect the road from bandits. Originally it was established to maintain a good connection through the Cacumuds between Camaria and Silvestria, but its effectiveness allowed it to be used in other parts of the empire such as Via Caroli and Via Magreini which serve their purpose to this day."
+ saelian_empire_knowns_no_borders:0 "The Empire Knows no Borders"
+ saelian_empire_knowns_no_borders_desc:0 "The influence of Saelian Empire has always extended far beyond its controlled territory. We were given tribute from variety of nations, from Aqerb to Gyrdia people saw us as hegemons of the continent. Our religious influence grew even faster than our empire could expand and soon encompassed the whole continent swearing their allegiance to the emperor."
+ saelian_economical_integration:0 "Economic Integration"
+ saelian_economical_integration_desc:0 "Controlling vast amounts of land grants us an economic independence, meaning that we can produce almost anything without relying on external factors. To further improve this, emperor must ensure that different goods can safely be transported to a different part of the nation in order to be processed and sold outside of the empire, even more increasing our monopoly."
+ saelian_emperors_guard:0 "Emperor's Guard"
+ saelian_emperors_guard_desc:0 "The most famous military unit in this part of the world - Emperor's Guard - is synonymous with efficiency, discipline and loyalty to the state. They played a major part in many early medieval conflicts, especially during the invasion of Camaria and conquest of Magreina. While some that it has traditions in the legion of Saelius, it wasn't officialy proclaimed until the third century. Their primary task was always to ensure the safety of the emperor, but they were often used during wars, to pacify rebels or ensure that negotiations go according to plan."
+ saelian_pax_saeliana:0 "Pax Saeliana"
+ saelian_pax_saeliana_desc:0 "When people talk about 'The Saelian Peace' they often mean different things. Most see it as a historic period during the medieval era, known for its stability and prosperity which helped reinforce the empire as leading force on the continent. Some view it as every period of overall peace in the empire and general lack of conflict in the region. However, there is a more radical view - the peace in the world can only by attained through the Imperial Hegemony."
