--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -59,3 +59,13 @@
  steppe_unexploited_lands_desc:0 "While the Gisian basin itself was densely populated, rest of the steppe remained largely untouched by human hands. This virgin land holds many treasures that wait for us to discover them."
  steppe_horde_administration:0 "Horde Administration"
  steppe_horde_administration_desc:0 "While administration might not be the right word to describe internal situation of the hordes, it still effectively manages to hold and maintain large swats of land with relatively small autonomy."
+
+ absorb_lesser_hordes_title:0 "Absorb Lesser Horde"
+ absorb_lesser_hordes_desc:0 "Force a nomad nation to integrate into our horde.\n If they accept, they will become our vassal."
+ absorb_lesser_hordes_tooltip:0 "Force a nomad nation to integrate into our horde."
+ absorb_lesser_hordes_dialog:0 "Force a nomad nation to integrate into our horde."
+ DIPLO_ROYAL_MARRIAGE_E:0 "Have Royal Marriage"
+ CAPITAL_DISTANCE_E:0 "Capital Distance"
+ LIBERTY_DESIRE_E_25:0 "Liberty Desire under 25"
+ LIBERTY_DESIRE_E_10:0 "Liberty Desire under 10"
+ SAME_RELIGION_E:0 "Same Religion"
