--- a/localisation/TD_01_flavour_bogiland_l_english.yml
+++ b/localisation/TD_01_flavour_bogiland_l_english.yml
@@ -59,3 +59,21 @@
  nevledi_land_management_desc:0 "Quick urbanization and quickly decreasing amount of undeveloped made our population much more efficient and careful in deciding where farms and industries should go."
  nevledi_down_the_magreina:0 "Down the Magreina"
  nevledi_down_the_magreina_desc:0 "The city of Wulki Szanec is a small at the first glance, but it has a one important feature - it lies centrally on the Magreina River. Our rulers often taxed passing merchants high tolls at the expense of popularity among the people of Nifthem."
+
+ group_bogilish_ideas:0 "Bogilish Minor Ideas"
+ group_bogilish_ideas_bonus:0 "Bogilish Minor Ambition"
+ group_bogilish_ideas_start:0 "Bogilish Minor Traditions"
+ bogilish_bogilish_crafts:0 "Bogilish Crafts"
+ bogilish_bogilish_crafts_desc:0 "Many princedoms and provinces of Bogiland are all known for their pattern which they put on vases, jewelry, plates and even houses. They are famous for their variety - a local pattern can vary from village to village, making each item unique."
+ bogilish_men_for_hire:0 "Men for Hire"
+ bogilish_men_for_hire_desc:0 "Due to their militant nature, people from Bogiland naturally gravitate towards mercenary jobs in which they can share their relieve their anger on the enemies."
+ bogilish_resist_colonization:0 "Resist Colonization"
+ bogilish_resist_colonization_desc:0 "For many years Silvestrine people were encouraged to settle in our land. We can't let that happen anymore - we must protect our nation."
+ bogilish_ehreni_trade:0 "Ehreni Trade"
+ bogilish_ehreni_trade_desc:0 "Thanks to lower border tarrifs from the empire, we often benefit from being middlemen between Saelian and Ehren merchants and can benefit from high reputation in both groups."
+ bogilish_pastures_and_forests:0 "Pastures and Forests"
+ bogilish_pastures_and_forests_desc:0 "Despite our not-so fertile soils, that didn't stop us from using it effectively. Forests provide our peasants with wild game and clearings are used as pastures for horses and livestock."
+ bogilish_personal_guard:0 "Personal Guard"
+ bogilish_personal_guard_desc:0 "It is customary in Bogiland for even the smallest rulers to have a private guard. This tradition comes from the most ancient of times when these lands were much wilder than they are today."
+ bogilish_my_house_my_domain:0 "My House, My Domain"
+ bogilish_my_house_my_domain_desc:0 "The concept of feudalism never really caught in Bogiland. While a king had many subjects, he didn't own the land of his subjects - it resembled much more tributary system than imperial land renting."
