--- a/localisation/TD_01_flavour_geniburgh_company_l_english.yml
+++ b/localisation/TD_01_flavour_geniburgh_company_l_english.yml
@@ -50,6 +50,11 @@
  geniburgh_company.6.a:0 "Oh? youre approaching ME?"
  geniburgh_company.6.b:0 "He is kind of scary though..."
 
+ geniburgh_company.7.t:0 "Settling Down?"
+ geniburgh_company.7.desc:0 "After years of plundering this land, many of our men wish to finally settle down and build a nation - an Argenian haven in the east."
+ geniburgh_company.7.a:0 "Maybe it's time to build a nation..."
+ geniburgh_company.7.b:0 "We will not abandon our roots!"
+
  geniburgh_company_ideas:0 "Geniburgher Ideas"
  geniburgh_company_ideas_bonus:0 "Geniburgher Ambition"
  geniburgh_company_ideas_start:0 "Geniburgher Traditions"
