--- a/localisation/emperor_estates_l_english.yml
+++ b/localisation/emperor_estates_l_english.yml
@@ -456,12 +456,12 @@
  estate_burghers_colonial_nation:1 "Expand our Colony in [agenda_province.GetColonialRegionName]"
  estate_burghers_colonial_nation_requirements_tooltip:1 "§Y[Root.GetName]§! is the overlord of a colonial nation with at least §Y5§! cities in §Y[agenda_province.GetColonialRegionName]§!."
  estate_burghers_expand_trade_company:1 "Expand the [agenda_province.TradeCompany.GetName]"
- estate_burghers_trade_post_in_india:0 "Establish a Trade Post in India"
- estate_burghers_trade_post_in_india_reward_tooltip:1 "A province owned by §Y[Root.GetUsableName]§! in §YIndia§! with the trade good §YSilk§! or §YSpices§! will gain the modifier "§YMajor Trading Post§!", granting §G+1§! local goods produced."
- estate_burghers_trade_post_in_malacca:0 "Establish a Trade Post in the East Indies"
- estate_burghers_trade_post_in_malacca_reward_tooltip:1 "A province owned by §Y[Root.GetUsableName]§! in the §YIndonesia Trade Company§! region with the trade good §YSpices§! will gain the modifier "§YMajor Trading Post§!", granting §G+1§! local goods produced."
- estate_burghers_trade_post_in_china:0 "Establish a Trade Post in China"
- estate_burghers_trade_post_in_china_reward_tooltip:2 "A province owned by §Y[Root.GetUsableName]§! in §YChina§! with the trade good §YChinaware§! will gain the modifier "§YMajor Trading Post§!", granting §G+1§! local goods produced."
+ estate_burghers_trade_post_in_south_pemenia:0 "Establish a Trade Post in South Pemenia"
+ estate_burghers_trade_post_in_south_pemenia_reward_tooltip:1 "A province owned by §Y[Root.GetUsableName]§! in §YSouth Pemenia§! with the trade good §YSilk§! or §YSpices§! will gain the modifier "§YMajor Trading Post§!", granting §G+1§! local goods produced."
+ estate_burghers_trade_post_in_cakrawalunia:0 "Establish a Trade Post in Cakrawalunia"
+ estate_burghers_trade_post_in_cakrawalunia_reward_tooltip:1 "A province owned by §Y[Root.GetUsableName]§! in the §YCakrawalunia§! subcontinent with the trade good §YSpices§! will gain the modifier "§YMajor Trading Post§!", granting §G+1§! local goods produced."
+ estate_burghers_trade_post_in_china:0 "Establish a Trade Post in Hengtua"
+ estate_burghers_trade_post_in_china_reward_tooltip:2 "A province owned by §Y[Root.GetUsableName]§! in §YHengtua§! subcontinent with the trade good §YPemenisile§! will gain the modifier "§YMajor Trading Post§!", granting §G+1§! local goods produced."
  estate_burghers_silk_trade:0 "Control the Silk Trade"
  estate_burghers_spice_trade:0 "Control the Spice Trade"
  estate_burghers_tea_trade:0 "Control the Tea Trade"
@@ -958,8 +958,8 @@
  estate_burghers_colonise_more_X_desc:0 "Our settlers in [agenda_owned_province.GetName] report a thriving colony and a land that is ripe for further settlement. The [Root.GetBurghersName] request that we send colonists to claim the rest of [agenda_province.GetAreaName] for [Root.GetUsableName]."
  estate_burghers_colonial_nation_desc:0 "Our settlements in [agenda_province.GetColonialRegionName] are growing fast. The [Root.GetBurghersName] advocate that we support this growth and aid them to establish their own administration, so that they may develop into a regional outpost of [Root.GetAdjective] power able to stand on their own two legs."
  estate_burghers_expand_trade_company_desc:0 "The [Root.GetBurghersName] highlight the benefits that foreign trade provides for our nation. They urge us to use our resources - including our military strength - to expand the [agenda_province.TradeCompany.GetName]."
- estate_burghers_trade_post_in_india_desc:0 "The [Root.GetBurghersName] are enraptured by stories of the riches of India. They clamor for us to establish a trade post on the subcontinent so that they may open its trade up to us."
- estate_burghers_trade_post_in_malacca_desc:0 "The Spice Islands of the East are irresistible to the [Root.GetBurghersName]. They clamor for us to establish a trade post in the region so that they may begin to control the trade flowing out from them."
+ estate_burghers_trade_post_in_south_pemenia_desc:0 "The [Root.GetBurghersName] are enraptured by stories of the riches of India. They clamor for us to establish a trade post on the subcontinent so that they may open its trade up to us."
+ estate_burghers_trade_post_in_cakrawalunia_desc:0 "The Spice Islands of the East are irresistible to the [Root.GetBurghersName]. They clamor for us to establish a trade post in the region so that they may begin to control the trade flowing out from them."
  estate_burghers_trade_post_in_china_desc:0 "The [Root.GetBurghersName] are enraptured by stories of the riches of China. They clamor for us to establish a trade post on its shorelines so that they may open its trade up to us."
  estate_burghers_silk_trade_desc:0 "Among the opportunities that our outposts in the East offer are the chance to establish control over the sources of high-quality silk. The [Root.GetBurghersName] urge us to make their acquisition our priority."
  estate_burghers_spice_trade_desc:0 "Among the opportunities that our outposts in the East offer are the chance to establish control over the lands where spices are grown. The [Root.GetBurghersName] urge us to make their acquisition our priority."
