--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -65,7 +65,7 @@
  absorb_lesser_hordes_tooltip:0 "Force a nomad nation to integrate into our horde."
  absorb_lesser_hordes_dialog:0 "Force a nomad nation to integrate into our horde."
  DIPLO_ROYAL_MARRIAGE_E:0 "Have Royal Marriage"
- CAPITAL_DISTANCE_E:0 "Capital Distance"
+ CAPITAL_DISTANCE_E:0 "Border Distance"
  LIBERTY_DESIRE_E_25:0 "Liberty Desire under 25"
  LIBERTY_DESIRE_E_10:0 "Liberty Desire under 10"
  SAME_RELIGION_E:0 "Same Religion"
