--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -772,3 +772,28 @@
  breibet_area:0 "Breibet"
  dmbagbets_area:0 "Dmbagbets"
  nomabgbets_area:0 "Nomabgbets"
+
+ bugkeut_area:0 "Bugkeut"
+ derganu_area:0 "Derganu"
+ dasamban_area:0 "Dasamban"
+ bisdan_area:0 "Bisdan"
+ akiymaba_area:0 "Akiymaba"
+ sousaeul_area:0 "Sousaeul"
+ haejonghen_area:0 "Haejonghen"
+ geoumeng_area:0 "Geoumeng"
+ mangeodang_area:0 "Mangeodang"
+ utar_area:0 "Utar"
+ kwokuen_archipelago_area:0 "Kwokuen Archipelago"
+ tohian_area:0 "Tohian"
+ komukaigan_area:0 "Komukaigan"
+ shishen_area:0 "Shishen"
+ chirabaru_area:0 "Chirabaru"
+ tsoyoka_area:0 "Tsoyoka"
+ kamori_area:0 "Kamori"
+ azumaga_area:0 "Azumaga"
+ kyonoshima_area:0 "Kyonoshima"
+ kitasari_area:0 "Kitasari"
+ tengkyuro_area:0 "Tengkyuro"
+ sakaiko_area:0 "Sakaiko"
+ north_yabuhan_islands_area:0 "North Yabuha Islands"
+ south_yabuhan_islands_area:0 "South Yabuha Islands"
