--- a/localisation/TD_ages_l_english.yml
+++ b/localisation/TD_ages_l_english.yml
@@ -17,6 +17,8 @@
  age_of_reformation_short:0 "Reformation"
  age_of_reformation:0 "Age of Reformation"
  age_of_reformation_desc:0 "As the Taedian nations grow tired of archaic imperial regime, new belief is slowly rising in the continent, all while old world and chantlian civilisations slowly learn to adapt to the integrate."
+ TD_ab_northern_frontier:0 "The Northern Frontier"
+ TD_ab_northern_frontier_tt:0 "Has 'The Northern Frontier' unlocked"
 
 
  age_of_absolutism_short:0 "Absolutism"
