--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -70,6 +70,9 @@
  argenia.5.a:0 "Let's Set it up."
  argenia.5.b:0 "Maybe there's more land west of Lanta?"
  argenia.5.c:0 "Why? I don't even like whales! Or seals for that matter..."
+ 
+ TD_lantan_whaling:0 "Lantan Whaling"
+ TD_lantan_trading_outpost:0 "Lantan Outpost"
 
  
  estate_burghers_dorchean_fisheries:0 "Dorchean Fisheries"
