--- a/localisation/TD_01_flavour_colonial_l_english.yml
+++ b/localisation/TD_01_flavour_colonial_l_english.yml
@@ -11,13 +11,17 @@
  TD_new_world_colonial.2.b:0 "I don't feel like trading with primitives."
  TD_new_world_colonial.2.c:0 "You belong on a plantation!"
  TD_trading_with_the_natives:0 "Trading with the natives"
+ desc_TD_trading_with_the_natives:0 "Colonists in this province often trade with neighboring natives.
 
  TD_new_world_colonial.3.t:0 "Bankrupt Colony"
  TD_new_world_colonial.3.desc:0 "It appears that one of our colonies has been abandoned by none other than the investor who started it, but thankfully he was captured and swiftly executed. Now, the people withouth new settlers lack proper food and supplies will struggle to survive without our help. What shall we do about it?"
  TD_new_world_colonial.3.a:0 "Support the colony"
  TD_new_world_colonial.3.b:0 "Support the colony and change approach"
  TD_new_world_colonial.3.c:0 "Left them to rot"
- TD_influx_of_cash:0 "Influx of Cash"
+ TD_abandoned_colony:0 "Abandoned Colony"
+ desc_TD_abandoned_colony:0 "This colony has been abandoned by their overlords."
+ TD_influx_of_cash:0 "Influx of Goods"
+ desc_TD_influx_of_cash:0 "This colony has recently received a large supply of supplies."
 
  TD_new_world_colonial.4.t:0 "Plague destroys local crops"
  TD_new_world_colonial.4.desc:0 "Hostile environment of the new world has once again caused problems for our colonists. This time - the crops have been affected by a serious disease which makes them unable to bloom. If we don't respond quickly our colonists will soon starve to death."
@@ -51,6 +55,8 @@
  TD_new_world_colonial.9.desc:0 "Often, when the farmers travel to the new world for the first time, they want to bring crops from their homeland which are familiar to them in taste and in methods of cultivation. Often this is harmless, but once in a while colonists have to deal with infertile soils and climate unfitting for taedian crops."
  TD_new_world_colonial.9.a:0 "Arrange supplies to affected colonies"
  TD_new_world_colonial.9.b:0 "They have to survive on their own"
+ TD_infertile_soils:0 "Infertile Soils"
+ desc_TD_infertile_soils:0 "Soil in this province isn't suitable enough for taedian crops."
 
  TD_new_world_colonial.10.t:0 "Birth of a New Colonial City"
  TD_new_world_colonial.10.desc:0 "One of our new world settlements has been growing rapidly in the recent times. Whether it was from our efforts, preexisting native infrastructure, favorable environment or simply luck, its importance as a regional hub is unquestionable. This bustling city is attracting more and more old world settlers and serves as a shining example of our colonial successes. We must invest in it even further."
