--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -2,6 +2,8 @@
  consolidate_the_steppe:0 "Consolidate the Steppe"
  desc_consolidate_the_steppe:0 "Our horde has ambitions to unite the entire steppe."
  settlers_pushed_back:0 "Settlers Pushed Back"
+ desc_settlers_pushed_back:0 "The hordes successfully managed to kill colonists and scare offany potential settlers."
+ colonizers_pushed_back_tooltip:0 "Colonists fear too much for their life and won't try to settle this province again."
  
  CB_ALLOWED_po_push_back_colonizers_taedium:0 "Push Back Colonizers"
 
