--- a/localisation/TD_01_flavour_nifthem_l_english.yml
+++ b/localisation/TD_01_flavour_nifthem_l_english.yml
@@ -37,6 +37,7 @@
  randwerpen.5.b:0 "Let them free"
  NAR_nifthem_new_management_tt:0 "All Ehren subjects in Nifthem will become our vassals"
  NAR_nifthem_freedom_tt:0 "All Ehren subjects in Nifthem will become free"
+ EHR_trading_point:0 "Ehren Trading Point"
 
  nifthem_first_initiative:0 "Our Initiative"
 
