--- a/localisation/TD_rebels_l_english.yml
+++ b/localisation/TD_rebels_l_english.yml
@@ -42,3 +42,7 @@
  xianga_rebels_name:0 "Xianga Rebels"
  xifang_rebels_name:0 "Xifang Rebels"
  zimahei_cult_rebels_name:0 "Zimahei Cult Rebels"
+ aminian_pantheon_rebels_name:0 "Aminian Pantheon Rebels"
+ bjateel_animism_rebels_name:0 "Bjateel Animism Rebels"
+ cach_moi_rebels_name:0 "Cach Moi Rebels"
+ dejilobi_rebels_name:0 "Dejilobi Rebels"
