--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -90,3 +90,7 @@
  aiunusu_region:0 "Aiunusu"
  ivory_coast_region:0 "Voitak"
  saensakha_region:0 "Saen-Sakha"
+ kindulia_region:0 "Kindulia"
+ dagiligi_region:0 "Dagiligi"
+ south_western_amin_ocean_region:0 "South-Western Amin Ocean"
+ western_pisachaian_ocean_region:0 "Western Pisachaian Ocean"
