--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -71,6 +71,7 @@
  form_muzbah_desc:0 ""
 
  hestan_nation_title:0 "Unite Hestan @HES"
+ hestan_nation_desc:0 "After centuries of disunity and petty bittering, we can finally stand together as a one nation."
  
  apaxtaros_nation_title:0 "Embrace Pamkusean Identity @APA"
  apaxtaros_nation_desc:0 "Our rulers took a liking in the pamkusean culture. Their fashion, art, music and customs mixed with our visparayan traditions. Fully adopting local culture will solidify our rule over the Deponian Peninsula for ages to come."
