--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -48,6 +48,7 @@
  agellidian_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  agellidian_rebels_army:0 "$RELIGION$ Army"
  agellidian_rebels_demand:0 "Convert $COUNTRYNAME$"
+ Yaltaqadim:0 "Yaltaqadim"
 
  wirosepan:0 "Wirosepan"
  wirosepan_religion_desc:0 "When the Saelian missionaries reached the Dorchean isles they had to take a new approach to their mission. They presented the Emperor Saelius as a god-like and omnipotent figure of a brave warrior seeking to establish his realm on earth. This idea quickly spread  even without the need of missionaries, but some time after the popularization of Universalist ideals in the isles it became a dying faith with little prospect of survival - unless someone shook the very foundation of Saelian church."
@@ -56,6 +57,7 @@
  wirosepan_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  wirosepan_rebels_army:0 "$RELIGION$ Army"
  wirosepan_rebels_demand:0 "Convert $COUNTRYNAME$"
+ gelynians:0 "Gelynians"
 
 
 
@@ -99,6 +101,7 @@
  qubrayian_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  qubrayian_rebels_army:0 "$RELIGION$ Army"
  qubrayian_rebels_demand:0 "Convert $COUNTRYNAME$"
+ mud_cult:0 "Mud Cult"
 
  rah_jadid:0 "Rah Jadid"
  rah_jadid_religion_desc:0 "The roots of this faith can be tracked to Ilumist sects in Qarasam who syncretices their beliefs with Uttarian dualistic view of the world, but it was de facto founded by Yatun who ruled Frankras and later the entire Visparaya in X century. Doctrines of this religion changes across the many rulers and states, but overall is seen as an attempt to merge monotheistic Ilumist religion with multiple Hestani faiths."
@@ -143,6 +146,7 @@
  marstonic_pantheon_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  marstonic_pantheon_rebels_army:0 "$RELIGION$ Army"
  marstonic_pantheon_rebels_demand:0 "Convert $COUNTRYNAME$"
+ czorci:0 "Czorci"
 
  camarian_sun_cult:0 "Camarian Sun Cult"
  camarian_sun_cult_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
@@ -150,6 +154,7 @@
  camarian_sun_cult_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  camarian_sun_cult_rebels_army:0 "$RELIGION$ Army"
  camarian_sun_cult_rebels_demand:0 "Convert $COUNTRYNAME$"
+ camarian_moon_cult:0 "Camarian Moon Cult"
 
  ehrenic_pantheon:0 "Ehrenic Pantheon"
  ehrenic_pantheon_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
@@ -178,6 +183,7 @@
 
 
  anhativaz:0 "Anhativaz"
+ CRUSADE_ANHATIVAZI:0 "Holy War" #todo
 
  anichvaro:0 "Anichvaro"
  anichvaro_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
@@ -208,6 +214,7 @@
  nahitar_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  nahitar_rebels_army:0 "$RELIGION$ Army"
  nahitar_rebels_demand:0 "Convert $COUNTRYNAME$"
+ radists:0 "Radists"
 
  uttarian:0 "Uttarian"
  uttarian_religion_desc:0 "The core of Uttarian religion emphasises the dual nature of the world which is controlled by Abadih and Anoxwardan, who rule the Earth alternately in a cyclic pattern. This religion is characterized by complex cosmology with numerous lesser gods and deities."
@@ -216,6 +223,7 @@
  uttarian_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  uttarian_rebels_army:0 "$RELIGION$ Army"
  uttarian_rebels_demand:0 "Convert $COUNTRYNAME$"
+ akhaaoj:0 "Akhaaoj"
 
  kausali:0 "Kausali"
  kausali_religion_desc:0 ""
@@ -246,6 +254,7 @@
  itonatilu_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  itonatilu_rebels_army:0 "$RELIGION$ Army"
  itonatilu_rebels_demand:0 "Convert $COUNTRYNAME$"
+ kilitoli:0 "Kilitoli"
 
  lummak_mythology:0 "Lummak Mythology"
  lummak_mythology_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
@@ -253,6 +262,7 @@
  lummak_mythology_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  lummak_mythology_rebels_army:0 "$RELIGION$ Army"
  lummak_mythology_rebels_demand:0 "Convert $COUNTRYNAME$"
+ tonatiqa:0 "Tonatiqa"
 
  achiqnay:0 "Achiqnay"
  achiqnay_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
@@ -260,6 +270,7 @@
  achiqnay_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  achiqnay_rebels_army:0 "$RELIGION$ Army"
  achiqnay_rebels_demand:0 "Convert $COUNTRYNAME$"
+ animist:0 "Animist"
 
 
 
@@ -324,6 +335,7 @@
  samgharsahi_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  samgharsahi_rebels_army:0 "$RELIGION$ Army"
  samgharsahi_rebels_demand:0 "Convert $COUNTRYNAME$"
+ handeran:0 "Handeran"
 
  otigari:0 "Otigari"
  otigari_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
@@ -338,6 +350,7 @@
  nallavul_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  nallavul_rebels_army:0 "$RELIGION$ Army"
  nallavul_rebels_demand:0 "Convert $COUNTRYNAME$"
+ pullara:0 "Pullara"
 
  desjaniti:0 "Desjaniti"
  desjaniti_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
@@ -345,6 +358,7 @@
  desjaniti_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  desjaniti_rebels_army:0 "$RELIGION$ Army"
  desjaniti_rebels_demand:0 "Convert $COUNTRYNAME$"
+ virkatagi:0 "Virkatagi"
 
  bhajsaya:0 "Bhajsaya"
  bhajsaya_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
@@ -352,6 +366,7 @@
  bhajsaya_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  bhajsaya_rebels_army:0 "$RELIGION$ Army"
  bhajsaya_rebels_demand:0 "Convert $COUNTRYNAME$"
+ gatadena:0 "Gatadena"
 
  ayuhuro:0 "Ayuhuro"
  ayuhuro_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
@@ -359,6 +374,7 @@
  ayuhuro_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  ayuhuro_rebels_army:0 "$RELIGION$ Army"
  ayuhuro_rebels_demand:0 "Convert $COUNTRYNAME$"
+ asiraghi:0 "Asiraghi"
 
 
 
@@ -393,6 +409,7 @@
 
  cach_moi:0 "Cach Moi"
  cach_moi_religion_desc:0 "\nAll Hengtuan religions share a concept of Zheng, which represents ruler's legitimacy, competency and approval by heaven, but many scholars disagree on what is the most blessed government."
+ cach_moi_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  cach_moi_rebels_title:0 "Religious"
  cach_moi_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  cach_moi_rebels_army:0 "$RELIGION$ Army"
@@ -403,7 +420,7 @@
  gajifeng_spiritualism:0 "Gajifeng Spiritualism"
  gajifeng_spiritualism_religion_desc:0 "Gajifeng Spiritualism is a bulk term for different sects and beliefs practiced by the Tsakung people in Dasenli and neighboring areas. They put a great importance in respecting the dead who are said to roam the countryside."
  gajifeng_spiritualism_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
- gajifeng_spiritualism_rebels_title:0 "Religious"
+ gajifeng_spiritualism_rebels_title:0mud_cult "Religious"
  gajifeng_spiritualism_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  gajifeng_spiritualism_rebels_army:0 "$RELIGION$ Army"
  gajifeng_spiritualism_rebels_demand:0 "Convert $COUNTRYNAME$"
@@ -415,7 +432,8 @@
  dejilobi_rebels_title:0 "Religious"
  dejilobi_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  dejilobi_rebels_army:0 "$RELIGION$ Army"
- dejilobi_rebels_demand:0 "Convert $COUNTRYNAME$"
+ dejilobi_rebels_demand:0 "Convert $COUNTRYNAME$" 
+ henga:0 "Henga"
  
  bjateel_animism:0 "Bjateel Animism"
  bjateel_animism_religion_desc:0 "Local Animism flavour that believe animals are aspects of gods. Do better Description (WIP)."
