--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -183,7 +183,7 @@
 
 
  anhativaz:0 "Anhativaz"
- CRUSADE_ANHATIVAZI:0 "Holy War" #todo
+ CRUSADE_ANHATIVAZI:0 "Holy War"
 
  anichvaro:0 "Anichvaro"
  anichvaro_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
@@ -408,19 +408,20 @@
  xifang_rebels_demand:0 "Convert $COUNTRYNAME$"
 
  cach_moi:0 "Cach Moi"
- cach_moi_religion_desc:0 "\nAll Hengtuan religions share a concept of Zheng, which represents ruler's legitimacy, competency and approval by heaven, but many scholars disagree on what is the most blessed government."
+ cach_moi_religion_desc:0 "People of Voitak and all of southern Pemenia have a strong attachment to their local legends and myths which they integrate into the Hengtuan cosmology.\nAll Hengtuan religions share a concept of Zheng, which represents ruler's legitimacy, competency and approval by heaven, but many scholars disagree on what is the most blessed government."
  cach_moi_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  cach_moi_rebels_title:0 "Religious"
  cach_moi_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  cach_moi_rebels_army:0 "$RELIGION$ Army"
  cach_moi_rebels_demand:0 "Convert $COUNTRYNAME$"
+ traicuadat:0 "Traicuadat"
 
  eastern_pagan:0 "Eastern Pagan"
 
  gajifeng_spiritualism:0 "Gajifeng Spiritualism"
  gajifeng_spiritualism_religion_desc:0 "Gajifeng Spiritualism is a bulk term for different sects and beliefs practiced by the Tsakung people in Dasenli and neighboring areas. They put a great importance in respecting the dead who are said to roam the countryside."
  gajifeng_spiritualism_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
- gajifeng_spiritualism_rebels_title:0mud_cult "Religious"
+ gajifeng_spiritualism_rebels_title:0 "Religious"
  gajifeng_spiritualism_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  gajifeng_spiritualism_rebels_army:0 "$RELIGION$ Army"
  gajifeng_spiritualism_rebels_demand:0 "Convert $COUNTRYNAME$"
