--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -98,9 +98,9 @@
  fravasumi_company:0 "Fravasumi Charter"
  TRADE_COMPANY_FRAVASUMI_Root_Culture_GetName:0 "[Root.Culture.GetName] Fravasum Company"
  TRADE_COMPANY_FRAVASUMI_Trade_Company:0 "Fravasumi Trade Company"
- saneyan_company:0 "Saneyan Charter"
- TRADE_COMPANY_SANEYAN_Root_Culture_GetName:0 "[Root.Culture.GetName] Saneya Company"
- TRADE_COMPANY_SANEYAN_Trade_Company:0 "Saneyan Trade Company"
+ frankrani_company:0 "Frankrani Charter"
+ TRADE_COMPANY_FRAKRANI_Root_Culture_GetName:0 "[Root.Culture.GetName] Frankras Company"
+ TRADE_COMPANY_FRANKRANI_Trade_Company:0 "Frankrani Trade Company"
  raxasam_company:0 "Raxasam Charter"
  TRADE_COMPANY_RAXASAM_Root_Culture_GetName:0 "[Root.Culture.GetName] Raxasam Company"
  TRADE_COMPANY_RAXASAM_Trade_Company:0 "Raxasam Trade Company"
