loc fix and loc

--- a/localisation/TD_01_flavour_pohjoismaa_l_english.yml
+++ b/localisation/TD_01_flavour_pohjoismaa_l_english.yml
@@ -66,3 +66,21 @@
  indriger_edge_of_the_world_desc:0 "Our ports are the furthest north settled places in the known world. Many places are unsailable during winter months and foreign traders often wonder how do we survive in these harsh conditions. The truth is that the climate made us stronger and hardened like no other nation."
  indriger_new_land:0 "New Land"
  indriger_new_land_desc:0 "After reaching unpassable ice wastelands in the east, many turned their attention to the west where western explorers reported a whole new continent. Many of our people are eager to discover this new distand land."
+
+ puiduhakkurmaan_ideas:0 "Puiduhakkurmaan Ideas"
+ puiduhakkurmaan_ideas_bonus:0 "Puiduhakkurmaan Ambition"
+ puiduhakkurmaan_ideas_start:0 "Puiduhakkurmaan Traditions"
+ puid_old_forts:0 "The Forts of Old"
+ puid_old_forts_desc:0 "Even when our nation was barely even in the cradle, we knew how to construct fortifications in order to protect ourselves from foreign threats. Locations of many of those forts remain vital strategic poins of interest to us and the old castles are being constantly modernized."
+ puid_northern_king:0 "Northern King"
+ puid_northern_king_desc:0 "In earliest records of our people we are always mentioned the same way - the land of the northern king. People knew us from mythical stories of us defeating waves of hordes and nomads trying to conquer our land and they shall keep thinking of us this way."
+ puid_attrition_warfare:0 "Attrition Warfare"
+ puid_attrition_warfare_desc:0 "A major strategy used by our lords is to starve the enemy of resources and supply before engaging in battles, which proved to be effective against often disorganized nomads. Why fight the enemy when they can die themselves?"
+ puid_absolute_authority:0 "Absoluter Authority"
+ puid_absolute_authority_desc:0 "In order to keep peace and prosperity in this harsh and unforgiving land, our people need an iron fist to rule them. Compromise never is the most effective solution."
+ puid_new_routes_and_roads:0 "Routes and Roads"
+ puid_new_routes_and_roads_desc:0 "Unsuspecting Syvämetsän forest is often hiding variety of treasures, blocked by harsh winters and untraversable terrain. Thanks to the infrastructure efforts of our king and lords, our roads cut straight through it, providing easy access to timber and furs."
+ puid_into_the_unknown:0 "Into the Unknown"
+ puid_into_the_unknown_desc:0 "Stories and rumors of what treasures lie in the north are popular amongst our peasants. The land of golden trees, honey rivers and frozen giants is free for the taking!"
+ puid_societal_innovations:0 "Societal Innovations"
+ puid_societal_innovations_desc:0 "Our nation has come a long way, from many dispersed tribes to a strong and centralized kingdom. Nobody can predict what future will bring us, but we will surely adapt to remain powerful and united."
