--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -56,7 +56,7 @@
  agellard_region:0 "Agellardia"
  fiddatan_region:0 "Fiddatan"
  radoriasa_region:0 "Radoriasa"
- northern_pisachaian_ocean_region:0 "Northern Pisachaian Ocean"
+ northern_pisachaian_ocean_region:0 "Eastern Pisachaian Ocean"
  southern_niheyan_ocean:0 "Southern Niheyan Ocean"
  coicemhar_region:0 "Coicemhar"
  upper_moorfluss_region:0 "Upper Moorfluss"
